--- a/salt/base/app/files/nginx/sites-available/XX-zed.conf
+++ b/salt/base/app/files/nginx/sites-available/XX-zed.conf
@@ -1,24 +1,25 @@
+{% from 'settings/init.sls' import settings with context %}
 ###############################################################################
 ##       This file is managed by saltstack - DO NOT MANUALLY CHANGE IT       ##
 ###############################################################################
 
 server {
     # Listener for production/staging - requires external LoadBalancer directing traffic to this port
-    listen {{ environment_details.stores[store].zed.port }} default;
+    listen {{ settings.environments[environment].stores[store].zed.port }} default;
     
     # Listener for testing/development - one host only, doesn't require external LoadBalancer
     listen 80;
 
-    server_name {{ environment_details.stores[store].zed.hostname }};
+    server_name {{ settings.environments[environment].stores[store].zed.hostname }};
 
     keepalive_timeout 0;
     access_log  /data/logs/{{ environment }}/zed-access.log extended;
 
     root /data/shop/{{ environment }}/current/static/public/Zed;
 
-{%- if environment_details.stores[store].zed.htpasswd_file is defined %}
+{%- if settings.environments[environment].stores[store].zed.htpasswd_file is defined %}
     auth_basic            "Restricted Files";
-    auth_basic_user_file  {{ environment_details.stores[store].zed.htpasswd_file }};
+    auth_basic_user_file  {{ settings.environments[environment].stores[store].zed.htpasswd_file }};
 {%- endif %}
 
     set $application_env {{ environment }};
