refactor environment-details - config

--- a/salt/base/app/files/nginx/sites-available/XX-yves.conf
+++ b/salt/base/app/files/nginx/sites-available/XX-yves.conf
@@ -4,17 +4,17 @@
 
 server {
     # Listener for production/staging - requires external LoadBalancer directing traffic to this port
-    listen {{ environment_details.stores[store].yves.port }} default_server sndbuf=65535 rcvbuf=16384;
+    listen {{ settings.environments[environment].stores[store].yves.port }} default_server sndbuf=65535 rcvbuf=16384;
     
     # Listener for testing/development - one host only, doesn't require external LoadBalancer
     listen 80;
 
-    server_name {{ environment_details.stores[store].yves.hostnames|join(' ') }};
+    server_name {{ settings.environments[environment].stores[store].yves.hostnames|join(' ') }};
     access_log  /data/logs/{{ environment }}/yves-access.log extended;
 
-{%- if environment_details.stores[store].yves.htpasswd_file is defined %}
+{%- if settings.environments[environment].stores[store].yves.htpasswd_file is defined %}
     auth_basic            "Restricted Files";
-    auth_basic_user_file  {{ environment_details.stores[store].yves.htpasswd_file }};
+    auth_basic_user_file  {{ settings.environments[environment].stores[store].yves.htpasswd_file }};
 {%- endif %}
 
     root /data/shop/{{ environment }}/current/static/public/Yves;
@@ -29,7 +29,7 @@ server {
     ###
     ### Beware of load balancer heartbeat check (/monitoring/heartbeat), it must stay not rewritten.
 
-{%- if environment_details.stores[store].yves.hostnames|count == 1 %}
+{%- if settings.environments[environment].stores[store].yves.hostnames|count == 1 %}
     # Allow only first (default) hostname
     if ($host != $server_name) {
         rewrite ^(.*)$ http://$server_name$1 permanent;
