dwh - saiku fix

--- a/salt/base/dwh/files/etc/nginx/sites-available/XX-dwh.conf
+++ b/salt/base/dwh/files/etc/nginx/sites-available/XX-dwh.conf
@@ -1,6 +1,6 @@
 server {
   listen        443 ssl spdy;
-  server_name   {{ store_details.dwh.saiku_hostname }};
+  server_name   {{ settings.environments[environment].stores[store].dwh.saiku_hostname }};
 
   root          /var/www;
   access_log    /data/logs/{{ environment }}/dwh-proxy-access.log extended;
