fix pgsql database, logstash

--- a/salt/base/elasticsearch/files/environments/etc/elasticsearch/elasticsearch.yml
+++ b/salt/base/elasticsearch/files/environments/etc/elasticsearch/elasticsearch.yml
@@ -214,7 +214,7 @@ bootstrap.mlockall: true
 
 # Set both 'bind_host' and 'publish_host':
 #
-network.host: {{ settings.publish_ip }}
+network.publish_host: {{ settings.publish_ip }}
 
 # Set a custom port for the node to node communication (9300 by default):
 #
