--- a/salt/base/elasticsearch/files/single/etc/elasticsearch/elasticsearch.yml
+++ b/salt/base/elasticsearch/files/single/etc/elasticsearch/elasticsearch.yml
@@ -109,11 +109,11 @@ node.max_local_storage_nodes: 1
 
 # Set the number of shards (splits) of an index (5 by default):
 #
-index.number_of_shards: 6
+index.number_of_shards: 2
 
 # Set the number of replicas (additional copies) of an index (1 by default):
 #
-index.number_of_replicas: 1
+index.number_of_replicas: 0
 
 # Note, that for development on a local machine, with small indices, it usually
 # makes sense to "disable" the distributed features:
@@ -214,7 +214,7 @@ bootstrap.mlockall: true
 
 # Set both 'bind_host' and 'publish_host':
 #
-network.host: {{ settings.publish_ip }}
+network.publish_host: {{ settings.publish_ip }}
 
 # Set a custom port for the node to node communication (9300 by default):
 #
