--- a/salt/base/logstash/files/etc/logstash/conf.d/lumberjack.conf
+++ b/salt/base/logstash/files/etc/logstash/conf.d/lumberjack.conf
@@ -1,3 +1,4 @@
+{% from 'settings/init.sls' import settings with context %}
 {%- for environment, environment_details in pillar.environments.items() %}
 input {
     file {
@@ -22,7 +23,7 @@ output {
 {%- for environment, environment_details in pillar.environments.items() %}
     if "{{environment}}" in [tags] {
       elasticsearch_http {
-        host => "localhost"
+        host => "{{ settings.hosts.elasticsearch_data|first }}"
         index => "lumberjack_{{environment}}_%{+YYYY-MM-dd}"
       }
     }
