--- a/salt/base/logstash/files/etc/logstash/conf.d/lumberjack.conf
+++ b/salt/base/logstash/files/etc/logstash/conf.d/lumberjack.conf
@@ -5,13 +5,13 @@ input {
         path              => "/data/shop/{{environment}}/current/data/common/lumberjack/lumberjack-*"
         format            => "json"
         discover_interval => 5
-        tags              => ["yvesandzed", "{{environment}}"]
+        tags              => ["yzed", "{{environment}}"]
     }
 }
 {% endfor %}
 
 filter {
-    if "yvesandzed" in [tags] {
+    if "yzed" in [tags] {
         date {
             match => [ "dateAndTime", "ISO8601" ]
         }
@@ -19,7 +19,7 @@ filter {
 }
 
 output {
-  if "yvesandzed" in [tags] {
+  if "yzed" in [tags] {
 {%- for environment, environment_details in pillar.environments.items() %}
     if "{{environment}}" in [tags] {
       elasticsearch_http {
