--- a/salt/base/logstash/files/etc/logstash/conf.d/lumberjack.conf
+++ b/salt/base/logstash/files/etc/logstash/conf.d/lumberjack.conf
@@ -23,7 +23,7 @@ output {
 {%- for environment, environment_details in pillar.environments.items() %}
     if "{{environment}}" in [tags] {
       elasticsearch_http {
-        host => "{{ settings.hosts.elasticsearch_data|first }}"
+        host => "{{ settings.hosts.elasticsearch_logs|first }}"
         index => "lumberjack_{{environment}}_%{+YYYY-MM-dd}"
       }
     }
