--- a/salt/base/dwh/files/etc/postgresql/postgresql.conf
+++ b/salt/base/dwh/files/etc/postgresql/postgresql.conf
@@ -1,6 +1,6 @@
 # server
 data_directory = '/data/pgsql'
-listen_addresses = 'localhost'
+listen_addresses = '0.0.0.0'
 port = 5432
 max_connections = 20
 
