pgsql / kibana fixes

--- a/salt/base/logstash/files/etc/nginx/sites-available/kibana.conf
+++ b/salt/base/logstash/files/etc/nginx/sites-available/kibana.conf
@@ -17,11 +17,51 @@ server {
   client_body_timeout 600;
   client_header_timeout 600;
   send_timeout 600;
+
+  # Kibana
   location / {
     proxy_pass http://127.0.0.1:9292;
     proxy_set_header  Host $http_host;
     proxy_set_header  Authorization "";
     proxy_set_header  X-Forwarded-Proto https;
+  }
+
+  # ES proxies
+  location ~ ^/_aliases$ {
+    proxy_pass http://127.0.0.1:9200;
+    proxy_read_timeout 90;
+  }
+  location ~ ^/.*/_aliases$ {
+    proxy_pass http://127.0.0.1:9200;
+    proxy_read_timeout 90;
+  }
+  location ~ ^/_nodes$ {
+    proxy_pass http://127.0.0.1:9200;
+    proxy_read_timeout 90;
+  }
+  location ~ ^/.*/_search$ {
+    proxy_pass http://127.0.0.1:9200;
+    proxy_read_timeout 90;
+  }
+  location ~ ^/.*/_mapping {
+    proxy_pass http://127.0.0.1:9200;
+    proxy_read_timeout 90;
+  }
+
+  # Password protected end points
+  location ~ ^/kibana-int/dashboard/.*$ {
+    proxy_pass http://127.0.0.1:9200;
+    proxy_read_timeout 90;
+    limit_except GET {
+      proxy_pass http://127.0.0.1:9200;
+    }
+  }
+  location ~ ^/kibana-int/temp.*$ {
+    proxy_pass http://127.0.0.1:9200;
+    proxy_read_timeout 90;
+    limit_except GET {
+      proxy_pass http://127.0.0.1:9200;
+    }
   }
 
   # Authorization - allow ProjectNet without password, public access with password
