kibana - add configuration

--- a/salt/base/logstash/files/etc/nginx/sites-available/kibana.conf
+++ b/salt/base/logstash/files/etc/nginx/sites-available/kibana.conf
@@ -2,7 +2,7 @@ server {
   listen        443 ssl spdy;
   server_name   {{ pillar.kibana.hostname }};
 
-  root          /var/www;
+  root          /var/www/kibana3;
   access_log    /data/logs/kibana-proxy-access.log extended;
 
   ssl                   on;
