--- a/salt/base/php/files/opcache.ini
+++ b/salt/base/php/files/opcache.ini
@@ -4,8 +4,8 @@ opcache.max_accelerated_files=4096
 opcache.memory_consumption=128
 opcache.interned_strings_buffer=8
 opcache.fast_shutdown=1
-{%- if 'dev' in grains.roles %}
+{% if 'dev' in grains.roles %}
 opcache.revalidate_freq=0
-{%- else -%}
+{% else -%}
 opcache.revalidate_freq=60
 {%- endif -%}
