--- a/salt/base/logstash/files/etc/nginx/sites-available/kibana.conf
+++ b/salt/base/logstash/files/etc/nginx/sites-available/kibana.conf
@@ -19,6 +19,11 @@ server {
   send_timeout 600;
 
   # Kibana
+  
+  location /config.js {
+    alias /etc/kibana3/config.js;
+  }
+  
   location / {
     proxy_pass http://127.0.0.1:9292;
     proxy_set_header  Host $http_host;
