Try if it's possible to have non-managed intances on managed account

--- a/cloud.profiles.d/rackspace.conf
+++ b/cloud.profiles.d/rackspace.conf
@@ -3,24 +3,28 @@ prod-rackspace-wheezy-1GB:
   size: 1 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
   flush_mine_on_destroy: True
+  managedcloud: False
 
 prod-rackspace-wheezy-2GB:
   provider: prod-rackspace
   size: 2 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
   flush_mine_on_destroy: True
+  managedcloud: False
 
 prod-rackspace-wheezy-4GB:
   provider: prod-rackspace
   size: 4 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
   flush_mine_on_destroy: True
+  managedcloud: False
 
 prod-rackspace-wheezy-8GB:
   provider: prod-rackspace
   size: 8 GB Performance
   image: Debian 7 (Wheezy) (PVHVM)
   flush_mine_on_destroy: True
+  managedcloud: False
 
 ###
 ### To use QA instances, you need to create a seperate provider in /etc/salt/cloud.providers.d
