--- a/salt/dev/mysql-server/files/etc/mysql/my.cnf
+++ b/salt/dev/mysql-server/files/etc/mysql/my.cnf
@@ -43,7 +43,7 @@ table_open_cache               = 4096
 # INNODB #
 innodb_flush_method            = O_DIRECT
 innodb_log_files_in_group      = 2
-innodb_log_file_size           = 256M
+#innodb_log_file_size           = 256M
 innodb_flush_log_at_trx_commit = 2
 innodb_file_per_table          = 1
 innodb_buffer_pool_size        = 128M
