--- a/salt/base/php/files/opcache.ini
+++ b/salt/base/php/files/opcache.ini
@@ -5,6 +5,7 @@ opcache.memory_consumption=128
 opcache.interned_strings_buffer=8
 opcache.fast_shutdown=1
 {% if 'dev' in grains.roles %}
+opcache.enable=0
 opcache.revalidate_freq=0
 {% else -%}
 opcache.revalidate_freq=60
