--- a/salt/base/php/files/php-fpm.conf
+++ b/salt/base/php/files/php-fpm.conf
@@ -6,4 +6,5 @@
 pid = /var/run/php5-fpm.pid
 error_log = /data/logs/php5-fpm.log
 log_level = notice
+listen.mode=0666
 include=/etc/php5/fpm/pool.d/*.conf
