--- a/salt/base/app/files/fpm/zed.conf
+++ b/salt/base/app/files/fpm/zed.conf
@@ -8,6 +8,7 @@
 listen = /tmp/.fpm.$pool.sock
 listen.backlog = 1000
 listen.allowed_clients = 127.0.0.1
+listen.mode=0666
 user = www-data
 group = www-data
 pm = dynamic
