--- a/base/nginx/files/etc/nginx/conf.d/allow-ip.conf
+++ b/base/nginx/files/etc/nginx/conf.d/allow-ip.conf
@@ -7,5 +7,5 @@
 satisfy any;
 
 {%- for network in salt['pillar.get']("hosting:http_auth_whitelist", ["127.0.0.1/32"]) %}
-allow {{ network }}
+allow {{ network }};
 {%- endfor %}
