--- a/base/php/files/etc/php5/php.ini
+++ b/base/php/files/etc/php5/php.ini
@@ -60,6 +60,7 @@ max_file_uploads = 20
 allow_url_fopen = On
 allow_url_include = Off
 default_socket_timeout = 60
+always_populate_raw_post_data = -1
 
 [Pdo_mysql]
 pdo_mysql.cache_size = 2000
