--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-concat": "~2.4",
     "gulp-hb": "~2.2",
     "gulp-jshint": "~1.9",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "~1.2",
     "gulp-sass": "~1.3",
     "gulp-sourcemaps": "~1.3",
