--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   },
   "devDependencies": {
     "browser-sync": "^2.6.1",
+    "browserify": "^9.0.8",
     "del": "~1.1",
+    "globby": "^2.0.0",
     "gulp": "~3.8",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-concat": "~2.4",
     "gulp-hb": "~2.2",
     "gulp-jshint": "~1.9",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "~1.2",
     "gulp-sass": "~1.3",
-    "gulp-sourcemaps": "~1.3",
-    "gulp-uglify": "~1.1",
-    "q": "~1.1"
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.2.0",
+    "jquery": "~2.1.3",
+    "q": "~1.1",
+    "through2": "^0.6.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
