--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.2.0",
     "jquery": "~2.1.3",
+    "merge-stream": "^0.1.7",
     "q": "~1.1",
+    "require-dir": "^0.3.0",
     "through2": "^0.6.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
