--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "through2": "^0.6.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "jquery-ui": "^1.10.5"
   }
 }
