--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "autoload": {
     "psr-0": {
       "SprykerFeature": "src/",
+      "SprykerEngine": "src/",
       "Acceptance": "tests/",
       "Function": "tests/",
       "Integration": "tests/",
