--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "spryker_infrastructure-package",
-  "version": "4.0.1",
-  "description": "This package provides the base infrastructure for Y&Z.",
+  "name": "spryker_ui",
+  "version": "1.0.0",
+  "description": "This package provides the user interface and frontend resources for Zed.",
 
   "author": {
     "name": "Project A Ventures",
@@ -11,15 +11,15 @@
   },
 
   "scripts": {
-    "spy-install" : "npm install && gulp dist"
+    "spy-install" : "npm install",
+    "spy-build"   : "npm install && gulp install+dist"
   },
 
   "dependencies" : {
     "angular"          : "~1.3",
     "angular-resource" : "~1.3",
     "angular-animate"  : "~1.3",
-    "textangular"      : "~1.3",
-    "highlight.js"     : "~8.5"
+    "textangular"      : "~1.3"
   },
 
   "devDependencies": {
