--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "psr-0": {
       "SprykerFeature": "src/",
       "Acceptance": "tests/",
-      "Function": "tests/",
+      "Functional": "tests/",
       "Integration": "tests/",
       "Unit": "tests/",
       "YvesUnit": "tests/"
