--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,7 +2,7 @@
 <phpunit
         backupGlobals="true"
         backupStaticAttributes="false"
-        bootstrap="tests/bootstrap.php"
+        bootstrap="tests/_bootstrap.php"
         cacheTokens="false"
         colors="true"
         convertErrorsToExceptions="true"
