--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "spryker/cart2",
+  "name": "spryker/cart",
   "autoload": {
     "psr-0": {
       "SprykerFeature": "src/",
       "Acceptance": "tests/",
-      "Function": "tests/",
+      "Functional": "tests/",
       "Integration": "tests/",
       "Unit": "tests/",
       "YvesUnit": "tests/"
