modify autoloader to be able to load bundles

--- a/composer.json
+++ b/composer.json
@@ -138,6 +138,9 @@
   "config": {
     "use-include-path": true
   },
+  "autoload": {
+    "files": ["Autoload/autoload.php"]
+  },
   "bin": [
     "Bundles/Console/bin/console"
   ]
