--- a/Bundles/PayoneOmsConnector/.gitignore
+++ b/Bundles/PayoneOmsConnector/.gitignore
@@ -1,4 +1,3 @@
-
 # IDEs
 /.idea
 /.project
@@ -25,4 +24,5 @@
 .grunt
 .sass-cache
 /node_modules/
-tests/_log/
+/tests/_log/*
+!/tests/_log/.gitkeep
