Add symfony/options-resolver & symfony/property-access dependencies (used by symfony/form)

--- a/composer.json
+++ b/composer.json
@@ -102,7 +102,9 @@
     "symfony/form": "~2.6.9",
     "symfony/http-foundation": "~2.6.9",
     "symfony/http-kernel": "~2.6.9",
+    "symfony/options-resolver": "~2.6.9",
     "symfony/process": "~2.6.9",
+    "symfony/property-access": "~2.6.9",
     "symfony/routing": "~2.6.9",
     "symfony/security": "~2.6.9",
     "symfony/serializer": "~2.6.9",
