Renamed KvStorage to Storage

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,6 @@
     "spryker/availability-checkout-connector": "self.version",
     "spryker/calculation": "self.version",
     "spryker/cart": "self.version",
-    "spryker/cart2": "self.version",
     "spryker/catalog": "self.version",
     "spryker/category": "self.version",
     "spryker/category-exporter": "self.version",
@@ -33,7 +32,6 @@
     "spryker/installer": "self.version",
     "spryker/invoice": "self.version",
     "spryker/kernel": "self.version",
-    "spryker/kv-storage": "self.version",
     "spryker/library": "self.version",
     "spryker/locale": "self.version",
     "spryker/lumberjack": "self.version",
@@ -61,6 +59,7 @@
     "spryker/setup": "self.version",
     "spryker/stock": "self.version",
     "spryker/stock-sales-connector": "self.version",
+    "spryker/storage": "self.version",
     "spryker/system": "self.version",
     "spryker/touch": "self.version",
     "spryker/twig": "self.version",
