Removed trailing coma

--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
   },
 
   "require": {
-    "digital-canvas/zend-framework": ">=1.12.2",
+    "digital-canvas/zend-framework": ">=1.12.2"
   },
   "require-dev": {
     "knplabs/github-api": "1.4.7",
