extend tests - squash this commit

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,8 @@
     "spryker/document": "self.version",
     "spryker/frontend-exporter": "self.version",
     "spryker/git": "self.version",
-    "spryker/glossary": "self.version",
-    "spryker/glossary-exporter": "self.version",
+//    "spryker/glossary": "self.version",
+//    "spryker/glossary-exporter": "self.version",
     "spryker/installer": "self.version",
     "spryker/invoice": "self.version",
     "spryker/kernel": "self.version",
