CD-273 add Wishlist Bundle Zed Business Layer

--- a/composer.json
+++ b/composer.json
@@ -125,7 +125,8 @@
     "phpunit/phpunit": "~3.7.0",
     "codeception/codeception": "*",
     "fzaninotto/faker": "1.4.*",
-    "codeception/remote-debug": "*"
+    "codeception/remote-debug": "*",
+    "phpspec/phpspec": "^2.2"
   },
   "minimum-stability": "stable",
   "prefer-stable": true,
