CD-225 add class map builder to Kernel

--- a/composer.json
+++ b/composer.json
@@ -130,6 +130,7 @@
     }
   },
   "bin": [
-    "Bundles/Console/bin/console"
+    "Bundles/Console/bin/console",
+    "Bundles/Kernel/bin/build-class-map"
   ]
 }
