--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,4 @@
 machine:
-  timezone:
-    Europe/Berlin
   php:
     version: 5.6.5
   environment:
@@ -10,4 +8,4 @@ machine:
     - elasticsearch
 test:
   override:
-    - bash circle_build.sh ${CIRCLE_BRANCH}
+    - bash php .circleBuild ${CIRCLE_BRANCH} ${API_TOKEN}
